--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
   </developers>
 
   <modules>
+    <module>cup</module>
     <module>jflex-unicode-maven-plugin</module>
     <module>jflex</module>
     <module>jflex-maven-plugin</module>
@@ -84,9 +85,11 @@
   </prerequisites>
 
   <properties>
+    <cup.version>11b</cup.version>
     <jflex.jdk.version>1.7</jflex.jdk.version>
     <maven.compiler.source>${jflex.jdk.version}</maven.compiler.source>
     <maven.compiler.target>${jflex.jdk.version}</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <issueManagement>
