--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -77,6 +77,7 @@
     <dependency>
       <groupId>de.jflex</groupId>
       <artifactId>cup</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.ant</groupId>
