--- a/cup_runtime/pom.xml
+++ b/cup_runtime/pom.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/maven-v4_0_0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>cup</artifactId>
+  <artifactId>cup_runtime</artifactId>
+  <version>${cup.version}</version>
   <parent>
     <groupId>de.jflex</groupId>
     <artifactId>jflex-parent</artifactId>
     <version>1.7.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <name>CUP</name>
+  <name>CUP runtime</name>
   <url>http://www2.cs.tum.edu/projects/cup/</url>
   <inceptionYear>1998</inceptionYear>
   <description>
