--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
   </developers>
 
   <modules>
-    <module>cup</module>
+    <module>cup_runtime</module>
     <module>jflex-unicode-maven-plugin</module>
     <module>jflex</module>
     <module>jflex-maven-plugin</module>
@@ -90,6 +90,7 @@
     <maven.compiler.source>${jflex.jdk.version}</maven.compiler.source>
     <maven.compiler.target>${jflex.jdk.version}</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <flex.basedir>${project.basedir}</flex.basedir>
   </properties>
 
   <issueManagement>
@@ -172,7 +173,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
-          <version>1.7</version>
+          <version>1.8</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
