--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <name>JFlex parent and aggregator POM</name>
   <version>1.7.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <url>http://jflex.de</url>
+  <url>http://jflex.de/</url>
   <description>JFlex parent and agregator POM</description>
 
   <parent>
@@ -77,15 +77,23 @@
       <post>jflex-announce@lists.sourceforge.net</post>
       <archive>http://sourceforge.net/mailarchive/forum.php?forum_name=jflex-announce</archive>
     </mailingList>
+    <mailingList>
+      <name>JFlex development team members</name>
+      <subscribe>https://lists.sourceforge.net/lists/listinfo/jflex-devel</subscribe>
+      <unsubscribe>https://lists.sourceforge.net/lists/listinfo/jflex-devel</unsubscribe>
+      <archive>http://sourceforge.net/mailarchive/forum.php?forum_name=jflex-devel</archive>
+      <post>jflex-devel@lists.sourceforge.net</post>
+    </mailingList>
   </mailingLists>
 
   <prerequisites>
-    <!-- 3.0.x fails to compile flex-maven-plugin https://issues.apache.org/jira/browse/MNG-5346 -->
-    <maven>3.2.2.</maven>
+    <maven>${maven.version}</maven>
   </prerequisites>
 
   <properties>
     <cup.version>11b</cup.version>
+    <!-- Version in Ubuntu Trusty -->
+    <maven.version>3.0.5</maven.version>
     <jflex.jdk.version>1.7</jflex.jdk.version>
     <maven.compiler.source>${jflex.jdk.version}</maven.compiler.source>
     <maven.compiler.target>${jflex.jdk.version}</maven.compiler.target>
@@ -130,12 +138,38 @@
         <artifactId>maven-shade-plugin</artifactId>
         <version>3.1.0</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-compat</artifactId>
+        <version>${maven.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-core</artifactId>
+        <version>${maven.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven.plugin-tools</groupId>
+        <artifactId>maven-plugin-annotations</artifactId>
+        <version>3.4</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven.plugin-testing</groupId>
+        <artifactId>maven-plugin-testing-harness</artifactId>
+        <version>2.1</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
     
   <build>
     <pluginManagement>
       <plugins>
+        <!-- We can only bootstrap our code with the latest published version. -->
+        <plugin>
+          <groupId>de.jflex</groupId>
+          <artifactId>jflex-maven-plugin</artifactId>
+          <version>1.6.1</version>
+        </plugin>
         <plugin>
           <groupId>com.coveo</groupId>
           <artifactId>fmt-maven-plugin</artifactId>
