--- a/testsuite/testcases/pom.xml
+++ b/testsuite/testcases/pom.xml
@@ -19,6 +19,12 @@
   <dependencies>
     <dependency>
       <groupId>de.jflex</groupId>
+      <artifactId>cup_runtime</artifactId>
+      <version>${cup.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>de.jflex</groupId>
       <artifactId>jflex-testsuite-maven-plugin</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
