Bring back cup_runtime in jflex.jar
Using maven-shade-plugin, add java_cup in jflex

--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jflex</artifactId>
   <parent>
@@ -82,6 +84,7 @@
     <dependency>
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -135,7 +138,8 @@
                 <mkdir dir="${cup.output.dir}"/>
                 <echo message="Generating LexParse.java from ${cup.file}"/>
                 <taskdef classname="java_cup.anttask.CUPTask" name="cup" classpath="${cup.jar}"/>
-                <cup srcfile="${cup.file}" destdir="${cup.output.dir}" interface="true" locations="false" parser="LexParse"/>
+                <cup srcfile="${cup.file}" destdir="${cup.output.dir}" interface="true"
+                    locations="false" parser="LexParse"/>
               </target>
             </configuration>
           </execution>
@@ -147,7 +151,8 @@
             </goals>
             <configuration>
               <target name="copy">
-                <copy file="${project.build.directory}/${project.artifactId}-${project.version}.jar" todir="lib"/>
+                <copy file="${project.build.directory}/${project.artifactId}-${project.version}.jar"
+                    todir="lib"/>
               </target>
             </configuration>
           </execution>
@@ -195,6 +200,25 @@
           <skip>false</skip>
           <skipDeploy>false</skipDeploy>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <artifactSet>
+                <includes>
+                  <include>de.jfex:cup_runtime_java</include>
+                </includes>
+              </artifactSet>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
     <pluginManagement>
