--- a/jflex/build.xml
+++ b/jflex/build.xml
@@ -90,6 +90,7 @@
     <javac destdir="${compile.output.dir}"
            debug="on"
            includeantruntime="true">
+      <src path="../cup_runtime/src/main/java"/>
       <src path="src/main/java"/>
       <src path="${generated.sources.dir}"/>
     </javac>
