Format java code automatically with google-java-format (#226)
* Add build dep on **fmt-maven-plugin** which uses [google-java-format](https://github.com/google/google-java-format).
  - Let the fmt-maven-plugin reformat the code every time it is compiled.
  - Note that version 1.4.0 or above are compiled with java 8, and JFlex allow uses jdk7 (see #225).
  - Use version 1.3.0 for now.

* Move **java_cup** in its own maven module.
  We don't want to reformat java_cup. Move it in its own Maven module and disable

* Use **maven-shade-plugin** to package **jflex.jar** like before.

* Add **Maven wrapper**.
  - Fucking Maven 3.5.0 has a bug which causes maven-shade-plugin to fail with
    `/target/classes (Is a directory)`
  - Import wrapper with `mvn -N io.takari:maven:wrapper`
  - Force add the wrapper jar (because jar extension is in `.gitignore`)
  - Update `run-tests` script with Maven (Travis detects its presence automatically and calls `mvnw` accordingly)
  - The wrapper is configured to use **Maven 3.5.2**

* Don't touch java source for now

* Update ant `buld.xml` as well

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
   </developers>
 
   <modules>
+    <module>cup_runtime</module>
     <module>jflex-unicode-maven-plugin</module>
     <module>jflex</module>
     <module>jflex-maven-plugin</module>
@@ -84,9 +85,11 @@
   </prerequisites>
 
   <properties>
+    <cup.version>11b</cup.version>
     <jflex.jdk.version>1.7</jflex.jdk.version>
     <maven.compiler.source>${jflex.jdk.version}</maven.compiler.source>
     <maven.compiler.target>${jflex.jdk.version}</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <issueManagement>
@@ -122,12 +125,35 @@
         <artifactId>maven-plugin-api</artifactId>
         <version>3.1.0</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.1.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
     
   <build>
+    <plugins>
+      <plugin>
+        <groupId>com.coveo</groupId>
+        <artifactId>fmt-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>format</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>com.coveo</groupId>
+          <artifactId>fmt-maven-plugin</artifactId>
+          <version>1.3.0</version>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
@@ -233,6 +259,7 @@
       </plugins>
     </pluginManagement>
   </build>
+
   <profiles>
     <profile>
       <!-- Profile for Java 8: Enable error-prone, Disable Doclint -->
