--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
         <plugin>
           <groupId>com.coveo</groupId>
           <artifactId>fmt-maven-plugin</artifactId>
-          <version>1.3.0</version>
+          <version>2.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -314,7 +314,7 @@
       <id>format-java</id>
       <activation>
         <property>
-          <name>!CI</name>
+          <name>!env.CI</name>
         </property>
       </activation>
       <build>
@@ -336,9 +336,8 @@
     <profile>
       <id>check-format-java</id>
       <activation>
-        <jdk>1.8</jdk>
         <property>
-          <name>CI</name>
+          <name>env.CI</name>
         </property>
       </activation>
       <build>
