Use the project version rather than hardcoded valie

--- a/testsuite/jflex-testsuite-maven-plugin/pom.xml
+++ b/testsuite/jflex-testsuite-maven-plugin/pom.xml
@@ -109,7 +109,7 @@
     <dependency>
       <groupId>de.jflex</groupId>
       <artifactId>jflex</artifactId>
-      <version>1.7.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <!-- If this dependency is not included, the Ant Javac task can't find -->
