--- a/jflex-unicode-maven-plugin/pom.xml
+++ b/jflex-unicode-maven-plugin/pom.xml
@@ -37,7 +37,7 @@
       <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>jflex-maven-plugin</artifactId>
-        <version>1.7.0-SNAPSHOT</version>
+        <version>${project.parent.version}</version>
         <executions>
           <execution>
             <goals>
