--- a/testsuite/testcases/pom.xml
+++ b/testsuite/testcases/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>de.jflex</groupId>
       <artifactId>jflex</artifactId>
-      <version>1.7.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
