--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/maven-v4_0_0.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>jflex</artifactId>
   <parent>
@@ -85,6 +85,8 @@
       <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>jflex-maven-plugin</artifactId>
+        <!-- bootstrap with previous version -->
+        <version>1.6.1</version>
         <executions>
           <execution>
             <goals>
@@ -108,7 +110,6 @@
             </goals>
             <configuration>
               <target name="cup">
-
                 <property name="cup.jar" value="lib/java-cup-${cup.version}.jar"/>
                 <property name="cup.output.dir" location="target/generated-sources/jflex/"/>
                 <property name="cup.file" location="src/main/cup/LexParse.cup"/>
@@ -116,7 +117,7 @@
                 <echo message="Generating LexParse.java from ${cup.file}"/>
                 <taskdef classname="java_cup.anttask.CUPTask" name="cup" classpath="${cup.jar}"/>
                 <cup srcfile="${cup.file}" destdir="${cup.output.dir}" interface="true"
-                    locations="false" parser="LexParse"/>
+                  locations="false" parser="LexParse"/>
               </target>
             </configuration>
           </execution>
@@ -129,7 +130,7 @@
             <configuration>
               <target name="copy">
                 <copy file="${project.build.directory}/${project.artifactId}-${project.version}.jar"
-                    todir="lib"/>
+                  todir="lib"/>
               </target>
             </configuration>
           </execution>
