--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.jflex</groupId>
   <artifactId>jflex-parent</artifactId>
@@ -43,7 +45,7 @@
       </roles>
       <timezone>-5</timezone>
     </developer>
-     <developer>
+    <developer>
       <id>decamps</id>
       <name>Régis Décamps</name>
       <email>decamps@users.sf.net</email>
@@ -159,16 +161,10 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-    
+
   <build>
     <pluginManagement>
       <plugins>
-        <!-- We can only bootstrap our code with the latest published version. -->
-        <plugin>
-          <groupId>de.jflex</groupId>
-          <artifactId>jflex-maven-plugin</artifactId>
-          <version>1.6.1</version>
-        </plugin>
         <plugin>
           <groupId>com.coveo</groupId>
           <artifactId>fmt-maven-plugin</artifactId>
@@ -248,9 +244,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
           <version>1.6</version>
-		  <configuration>
-			  <keyname>84A70085</keyname>
-		  </configuration>
+          <configuration>
+            <keyname>84A70085</keyname>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
