--- a/cup_runtime/pom.xml
+++ b/cup_runtime/pom.xml
@@ -38,8 +38,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <configuration>
-          <skip>false</skip>
-          <skipDeploy>false</skipDeploy>
+          <skip>true</skip>
+          <skipDeploy>true</skipDeploy>
         </configuration>
       </plugin>
     </plugins>
