--- a/pom.xml
+++ b/pom.xml
@@ -251,11 +251,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.6</version>
-          <!-- Skip internal plugins and examples -->
-          <configuration>
-            <skip>true</skip>
-            <skipDeploy>true</skipDeploy>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -269,6 +264,37 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <!-- In Maven 3, the default execution of site:attach-descriptor has been removed from the
+     built-in lifecycle bindings for projects with pom packaging. -->
+    <plugins>
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-descriptor</id>
+            <goals>
+              <goal>attach-descriptor</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <topSiteURL>http://jflex.de/</topSiteURL>
+          <stagingDirectory>/tmp/maven-site</stagingDirectory>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>site</id>
+            <goals>
+              <goal>index</goal>
+              <goal>summary</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 
   <reporting>
@@ -276,52 +302,15 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.9</version>
+        <version>2.7</version>
         <reportSets>
           <reportSet>
             <reports>
               <report>index</report>
-              <report>dependencies</report>
-              <report>project-team</report>
-              <report>issue-tracking</report>
-              <report>license</report>
-              <report>scm</report>
               <report>summary</report>
             </reports>
           </reportSet>
         </reportSets>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-pmd-plugin</artifactId>
-        <version>3.8</version>
-        <configuration>
-          <targetJdk>${jflex.jdk.version}</targetJdk>
-          <rulesets>
-            <ruleset>${basedir}/src/main/config/pmd/ruleset.xml</ruleset>
-          </rulesets>
-          <format>xml</format>
-          <linkXRef>true</linkXRef>
-          <minimumTokens>100</minimumTokens>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>taglist-maven-plugin</artifactId>
-        <version>2.4</version>
-        <configuration>
-          <tags>
-            <tag>TODO</tag>
-            <tag>FIXME</tag>
-            <tag>@todo</tag>
-            <tag>@deprecated</tag>
-          </tags>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-report-plugin</artifactId>
-        <version>2.20.1</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -343,21 +332,16 @@
           <relaxed>true</relaxed>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>jdepend-maven-plugin</artifactId>
-        <version>2.0</version>
-      </plugin>
     </plugins>
   </reporting>
 
-  <distributionManagement>
-    <site>
-      <id>localhost</id>
-      <name>Local site</name>
-      <url>file:///tmp/jflex/maven-site/</url>
-    </site>
-  </distributionManagement>
+  <!--<distributionManagement>-->
+    <!--<site>-->
+      <!--<id>localhost</id>-->
+      <!--<name>Local site</name>-->
+      <!--<url>file:///tmp/jflex/maven-site/</url>-->
+    <!--</site>-->
+  <!--</distributionManagement>-->
 
   <profiles>
     <profile>
@@ -406,7 +390,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-site-plugin</artifactId>
-            <version>3.2</version>
             <configuration>
               <reportPlugins>
                 <plugin>
