Move cup in a hierarchical directory and add cup-parent module. Extract initial cup.jar in target with maven-depency-plugin:unpack

--- a/pom.xml
+++ b/pom.xml
@@ -55,13 +55,13 @@
   </developers>
 
   <modules>
-    <module>cup_runtime</module>
+    <module>cup/cup_runtime</module>
+    <module>cup/cup</module>
     <module>jflex-unicode-maven-plugin</module>
     <module>jflex</module>
     <module>jflex-maven-plugin</module>
     <module>testsuite</module>
   </modules>
-
   <mailingLists>
     <mailingList>
       <name>JFlex User List</name>
