--- a/cup/cup_runtime/pom.xml
+++ b/cup/cup_runtime/pom.xml
@@ -4,20 +4,16 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>cup_runtime</artifactId>
-  <version>${cup.version}</version>
   <packaging>jar</packaging>
   <parent>
     <groupId>de.jflex</groupId>
-    <artifactId>jflex-parent</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
+    <artifactId>cup-parent</artifactId>
+    <version>11b</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>CUP runtime</name>
-  <url>http://www2.cs.tum.edu/projects/cup/</url>
-  <inceptionYear>1998</inceptionYear>
   <description>
     A copy of the Java CUP runtime.
-    CUP is a LALR parser generator for Java
   </description>
   <licenses>
     <license>
@@ -26,14 +22,4 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-  <build>
-    <plugins>
-      <!-- Do not format java_cup code -->
-      <plugin>
-        <groupId>com.coveo</groupId>
-        <artifactId>fmt-maven-plugin</artifactId>
-        <executions><execution><phase>none</phase></execution></executions>
-      </plugin>
-    </plugins>
-  </build>
 </project>
