Do not format code of cup

--- a/cup/cup/pom.xml
+++ b/cup/cup/pom.xml
@@ -13,7 +13,7 @@
   </parent>
   <name>CUP generator</name>
   <description>
-    The cup generator.
+    CUP generator and and task.
   </description>
   <build>
     <plugins>
