--- a/cup/cup_runtime/pom.xml
+++ b/cup/cup_runtime/pom.xml
@@ -4,12 +4,11 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>cup_runtime</artifactId>
-  <version>${cup.version}</version>
   <packaging>jar</packaging>
   <parent>
     <groupId>de.jflex</groupId>
-    <artifactId>jflex-parent</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
+    <artifactId>cup-parent</artifactId>
+    <version>11b</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>CUP runtime</name>
@@ -17,13 +16,5 @@
   <inceptionYear>1998</inceptionYear>
   <description>
     A copy of the Java CUP runtime.
-    CUP is a LALR parser generator for Java
   </description>
-  <licenses>
-    <license>
-      <name>CUP</name>
-      <url>http://www2.cs.tum.edu/projects/cup/licence.php</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
 </project>
