--- a/jflex/examples/cup/Makefile
+++ b/jflex/examples/cup/Makefile
@@ -2,8 +2,8 @@ JAVA=java
 JAVAC=javac
 # Root of the project
 ROOT=../../..
-JFLEX=$ROOT/jflex/bin/jflex
-CUPJAR=$ROOT/cup/cup/java-cup-11b.jar
+JFLEX=$(ROOT)/jflex/bin/jflex
+CUPJAR=$(ROOT)/cup/cup/java-cup-11b.jar
 CUP=$(JAVA) -jar $(CUPJAR) <
 CP=.:$(CUPJAR)
 
