Restore real ROOT

--- a/jflex/examples/cup/Makefile
+++ b/jflex/examples/cup/Makefile
@@ -1,8 +1,7 @@
 JAVA=java
 JAVAC=javac
 # Root of the project
-# regis Wrong on purpose, I want to see Travis fail
-ROOT=../..
+ROOT=../../..
 JFLEX=$(ROOT)/jflex/bin/jflex
 CUPJAR=$(ROOT)/cup/cup/java-cup-11b.jar
 CUP=$(JAVA) -jar $(CUPJAR) <
