--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.jflex</groupId>
   <artifactId>jflex-parent</artifactId>
@@ -43,7 +45,7 @@
       </roles>
       <timezone>-5</timezone>
     </developer>
-     <developer>
+    <developer>
       <id>decamps</id>
       <name>Régis Décamps</name>
       <email>decamps@users.sf.net</email>
@@ -128,7 +130,7 @@
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-plugin-api</artifactId>
-        <version>3.5.2</version>
+        <version>3.1.0</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven.plugin-tools</groupId>
@@ -153,7 +155,7 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-    
+
   <build>
     <pluginManagement>
       <plugins>
@@ -236,9 +238,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-gpg-plugin</artifactId>
           <version>1.6</version>
-		  <configuration>
-			  <keyname>84A70085</keyname>
-		  </configuration>
+          <configuration>
+            <keyname>84A70085</keyname>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
