--- a/jflex-maven-plugin/pom.xml
+++ b/jflex-maven-plugin/pom.xml
@@ -16,43 +16,14 @@
     documentation here:
     http://jflex.sourceforge.net/maven-jflex-plugin/
   </description>
-  <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>9</version>
-    <relativePath/>
-  </parent>
-  <!-- The parent is Sonatype, so we need to repeat things already in the jflex-parent -->
-  <url>http://jflex.de/</url>
-  <mailingLists>
-    <mailingList>
-      <name>JFlex User List</name>
-      <subscribe>https://lists.sourceforge.net/lists/listinfo/jflex-users</subscribe>
-      <unsubscribe>https://lists.sourceforge.net/lists/listinfo/jflex-users</unsubscribe>
-      <post>jflex-users@lists.sourceforge.net</post>
-      <archive>http://sourceforge.net/mailarchive/forum.php?forum_name=jflex-users</archive>
-    </mailingList>
-    <mailingList>
-      <name>JFlex Announcement List</name>
-      <subscribe>https://lists.sourceforge.net/lists/listinfo/jflex-announce</subscribe>
-      <unsubscribe>https://lists.sourceforge.net/lists/listinfo/jflex-announce</unsubscribe>
-      <post>jflex-announce@lists.sourceforge.net</post>
-      <archive>http://sourceforge.net/mailarchive/forum.php?forum_name=jflex-announce</archive>
-    </mailingList>
-  </mailingLists>
-  <issueManagement>
-    <system>Github</system>
-    <url>https://github.com/jflex-de/jflex/issues</url>
-  </issueManagement>
   <prerequisites>
     <maven>${maven.version}</maven>
   </prerequisites>
   <inceptionYear>2007</inceptionYear>
   <developers>
     <developer>
-      <id>decamps</id>
+      <id>regisd</id>
       <name>Régis Décamps</name>
-      <email>decamps@users.sf.net</email>
       <roles>
         <role>developer</role>
       </roles>
@@ -74,41 +45,16 @@
         <role>reviewer</role>
       </roles>
     </contributor>
-    <contributor>
-      <email>gerwin.klein@nicta.com.au</email>
-      <name>Gerwin Klein</name>
-      <roles>
-        <role>ant-task developer</role>
-      </roles>
-    </contributor>
   </contributors>
-  <licenses>
-    <license>
-      <name>BSD</name>
-      <url>http://opensource.org/licenses/BSD-3-Clause</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.version>3.0.5</maven.version>
-  </properties>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>2.5</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>1.4.1</version>
         <executions>
           <execution>
             <id>enforce-java</id>
@@ -127,130 +73,36 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-install-plugin</artifactId>
-        <version>2.5</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.4</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.1</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
-        <version>3.5</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
-        <version>2.6</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-site-plugin</artifactId>
-        <version>3.6</version>
-        <configuration>
-          <skip>false</skip>
-          <skipDeploy>false</skipDeploy>
-        </configuration>
-        <dependencies>
-          <dependency><!-- add support for ssh/scp -->
-            <groupId>org.apache.maven.wagon</groupId>
-            <artifactId>wagon-ssh</artifactId>
-            <version>1.0</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>3.0.1</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.16</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.6</version>
-        <configuration>
-          <keyname>84A70085</keyname>
-        </configuration>
       </plugin>
     </plugins>
-    <pluginManagement>
-      <plugins>
-        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-plugin-plugin</artifactId>
-                    <versionRange>[3.5,)</versionRange>
-                    <goals>
-                      <goal>descriptor</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore/>
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
   </build>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>${maven.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-testing</groupId>
       <artifactId>maven-plugin-testing-harness</artifactId>
-      <version>2.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>de.jflex</groupId>
       <artifactId>jflex</artifactId>
-      <version>1.7.0-SNAPSHOT</version>
+      <version>${project.parent.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
-      <version>${maven.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
-      <version>3.4</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -260,31 +112,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <scm>
-    <connection>scm:git:git@github.com:jflex-de/jflex.git</connection>
-    <developerConnection>scm:git:git@github.com:jflex-de/jflex.git</developerConnection>
-    <url>scm:git:git@github.com:jflex-de/jflex.git</url>
-  </scm>
-  <profiles>
-    <profile>
-      <id>release</id>
-      <distributionManagement>
-        <site>
-          <id>sourceforge</id>
-          <name>SourceForge JFlex Maven Plugin site</name>
-          <url>scp://shell.sourceforge.net/home/project-web/jflex/htdocs/jflex-maven-plugin</url>
-        </site>
-      </distributionManagement>
-    </profile>
-    <profile>
-      <id>localhost</id>
-      <distributionManagement>
-        <site>
-          <id>localhost</id>
-          <name>Local site</name>
-          <url>scp://localhost/tmp/jflex/jflex-maven-plugin</url>
-        </site>
-      </distributionManagement>
-    </profile>
-  </profiles>
 </project>
