Remove more of the POM

--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -44,7 +44,7 @@
       <timezone>-5</timezone>
     </developer>
     <developer>
-      <id>decamps</id>
+      <id>regisd</id>
       <name>Régis Décamps</name>
       <email>decamps@users.sf.net</email>
       <roles>
