Let jflex-maven-plugin inherite from jflex-parent

--- a/jflex-maven-plugin/pom.xml
+++ b/jflex-maven-plugin/pom.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>de.jflex</groupId>
+  <parent>
+    <groupId>de.jflex</groupId>
+    <artifactId>jflex-parent</artifactId>
+    <version>1.7.0-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
+  </parent>
   <artifactId>jflex-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>JFlex Maven Plugin</name>
-  <version>1.7.0-SNAPSHOT</version>
   <description>
     This is a Maven 3 plugin to generate Lexer code in Java from
     a Lexer specification, using JFlex.
